2008-02-21  Philipp Sehmisch  <tmw@crushnet.org>

	* data/items.xml: Gave the hair sprites and the player sprite the
	item types "hairstyle" and "racesprite". added some missing item
	types.
	* data/monsters.xml: Added attack properties to scorpions.
	* src/gui/gui.cpp: Showing a visible error message to the user when
	the font file can't be found.
	
2008-02-18  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* INSTALL: Added notes about installing gettext and cvs and updated
	required ENet version to 1.2.

2008-02-13  Philipp Sehmisch  <tmw@crushnet.org>

	* data/monsters.xml: Converted movement speed to pixels per second.

2008-02-12  Philipp Sehmisch  <tmw@crushnet.org>

	* data/monsters.xml: Added size and speed to the first four monsters.

2008-02-10  Philipp Sehmisch  <tmw@crushnet.org>

	* data/maps/new_23-1.tmx: Added Dimonds Cove outdoor map by MerlinX420.

2008-02-08  Philipp Sehmisch  <tmw@crushnet.org>

	* data/maps/new_14-1.tmx, data/maps/new_22-1.tmx: Added Dimonds Cove
	outdoor map by MerlinX420. Fixed some map bugs in snake dungeon.
	* data/items.xml: Added chicken leg meta information.

2008-02-07  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/skill.cpp: Fixed unix compilation problem.

2008-02-07  Philipp Sehmisch  <tmw@crushnet.org>

	* data/monsters.xml: Added different behaviors to maggots,
	scorpions, red scorpions and green slimes.

2008-02-05  Philipp Sehmisch  <tmw@crushnet.org>

	* data/monsters.xml: Added attributes to maggot (complete) and
	scorpion (incomplete) for testing server-sided monster attribute
	parsing.

2008-01-28  Philipp Sehmisch  <tmw@crushnet.org>

	* src/game.cpp, src/game.h, src/net/skillhandler.cpp,
	src/net/skillhandler.h, src/Makefile.am, src/CMakeLists.txt:
	Removed skill handler (relict from eAthena)
	* src/gui/skill.cpp, src/gui/skill.h: Implemented provisorical
	dialog for viewing skill experience and skill levels.
	* src/gui/status.cpp, src/gui/status.h: Implemented raising and